ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: student-cdarwitg
spec:
  ingressClassName: nginx
  rules:
  - host: student-cdarwitg.k8s-estudiantes.dev.censei.cl
    http:
      paths:
      - path: /api/inventario
        pathType: Prefix
        backend:
          service:
            name: inventario-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
